minor fix to the event form spacing

--- a/client/src/scss/signup.scss
+++ b/client/src/scss/signup.scss
@@ -66,6 +66,7 @@
       .container{
         display: flex;
         width: 100vw;
+        margin-bottom: 50px
        
       }
       .box{
